# vtt2text

./: .pre-commit-config.yaml  README.md  pyproject.toml  test.py  vtt2text.py
files/: transports_en_commun.txt  transports_en_commun.vtt
