[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vtt2text"
version = "0.1.3"
description = "A small package to clean up the content of a subtitle file to text"
authors = ["VU Anh Tuan <vuanhtuan1012@outlook.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.3"
tag_format = "$version"
